kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
  replicas: _{_REPLICAS_}_
  selector:
    matchLabels:
      app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      containers:
      - name: solar-system
        image: _{_IMAGE_}_
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP 
        volumeMounts:
        - name: mongo-secret-volume
          mountPath: "/mnt/env_vars"
          readOnly: true
      volumes:
      - name: mongo-secret-volume
        secret:
          secretName: mongo-db-creds
          items:
          - key: MONGO_URI
            path: MONGO_URI  # This ensures it's readable by `envLoader.js`
