kubernetes/production/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-cli-test
  namespace: solar-system
spec:
  serviceAccountName: external-secrets
  containers:
    - name: aws-cli
      image: amazon/aws-cli
      command: ["sleep", "3600"]
