kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: production
spec:
  type: ClusterIP  
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: solar-system
